--- a/themes/trackfellas/layout/_partial/footer.ejs
+++ b/themes/trackfellas/layout/_partial/footer.ejs
@@ -3,20 +3,20 @@
             <div class="row">
                 <div class="small-4 columns">
                 	<ul>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#team">Team</a></li>  
+                        <li><a href="index.html#about">About</a></li>
+                        <li><a href="index.html#team">Team</a></li>  
                     </ul>             
                 </div>
                 <div class="small-4 columns">
                     <ul class="no-bullet text-center">
-                        <li><a href="#blog">Blog</a></li>
-                        <li><a href="#signup">Sign Up</a></li>
-                		<li><a href="#contact">Contact</a></li>  
+                        <li><a href="index.html#blog">Blog</a></li>
+                        <li><a href="index.html#signup">Sign Up</a></li>
+                		<li><a href="index.html#contact">Contact</a></li>  
                     </ul>
                 </div>
                 <div class="small-4 columns">
                     <ul class="no-bullet text-right">
-                        <li><a href="/datenschutz.html">Privacy Policy</a></li>
+                        <li><a href="/privacy.html">Privacy Policy</a></li>
                         <li><a href="/impressum.html">Impressum</a></li>
                     </ul>
                 </div>
