--- a/themes/trackfellas/layout/_partial/after-footer.ejs
+++ b/themes/trackfellas/layout/_partial/after-footer.ejs
@@ -1,5 +1,5 @@
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.0/js/foundation/foundation.min.js"></script>
+        <script src="/js/jquery.min.js"></script>
+        <script src="/js/foundation.min.js"></script>
        <script src="/js/jquery.formchimp-min.js"></script>
         <script src="/js/jquery.smooth-scroll.js"></script>
         <script src="/js/jquery.ba-bbq-min.js"></script>
