--- a/themes/trackfellas/layout/_partial/head.ejs
+++ b/themes/trackfellas/layout/_partial/head.ejs
@@ -35,5 +35,5 @@
     <link rel="icon" href="<%- theme.favicon %>">
   <% } %>
   <%- css('css/app') %>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.0/js/vendor/modernizr.js"></script>
+  <script src="/js/modernizr.js"></script>
 </head>
