better integration of analytics and js files

--- a/themes/trackfellas/layout/_partial/head.ejs
+++ b/themes/trackfellas/layout/_partial/head.ejs
@@ -35,5 +35,5 @@
     <link rel="icon" href="<%- theme.favicon %>">
   <% } %>
   <%- css('css/app') %>
-  <script src="/js/modernizr.js"></script>
+  <%- js('js/modernizr') %>
 </head>
