--- a/themes/trackfellas/layout/_partial/after-footer.ejs
+++ b/themes/trackfellas/layout/_partial/after-footer.ejs
@@ -1,29 +1,7 @@
-        <script src="/js/jquery.min.js"></script>
-        <script src="/js/foundation.min.js"></script>
-       <script src="/js/jquery.formchimp-min.js"></script>
-        <script src="/js/jquery.smooth-scroll.js"></script>
-        <script src="/js/jquery.ba-bbq-min.js"></script>
-        <script src="/js/app-min.js"></script>
-        <script>
-
-            var gaProperty = '56536675-1';
-            var disableStr = 'ga-disable-' + gaProperty;
-            if (document.cookie.indexOf(disableStr + '=true') > -1) {
-            window[disableStr] = true;
-            }
-            function gaOptout() {
-            document.cookie = disableStr + '=true; expires=Thu, 31 Dec 2099 23:59:59 UTC; path=/';
-            window[disableStr] = true;
-            }
-
-        </script>
-        <script>
-            (function (i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments)
-                }, i[r].l = 1 * new Date();
-                a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-            ga('create', 'UA-56536675-1', 'auto');
-            ga('set', 'anonymizeIp', true);
-            ga('send', 'pageview');
-        </script>
+<%- js('js/jquery.min') %>
+<%- js('js/foundation.min') %>
+<%- js('js/jquery.formchimp-min') %>
+<%- js('js/jquery.smooth-scroll') %>
+<%- js('js/jquery.ba-bbq-min') %>
+<%- js('js/app-min') %>
+<%- partial('google-analytics') %>
