update for hexo 3.0, simplify js

--- a/themes/trackfellas/layout/_partial/after-footer.ejs
+++ b/themes/trackfellas/layout/_partial/after-footer.ejs
@@ -1,7 +1,6 @@
 <%- js('js/jquery.min') %>
 <%- js('js/foundation.min') %>
 <%- js('js/jquery.formchimp-min') %>
-<%- js('js/jquery.smooth-scroll') %>
-<%- js('js/jquery.ba-bbq-min') %>
+<%- js('js/smooth-scroll.min.js') %>
 <%- js('js/app-min') %>
 <%- partial('google-analytics') %>
