--- a/themes/trackfellas/layout/_partial/header.ejs
+++ b/themes/trackfellas/layout/_partial/header.ejs
@@ -10,11 +10,11 @@
                 </ul>
                 <section class="top-bar-section">
                     <ul class="right">
-                        <li><a href="/index.html#about">About</a></li>
-                        <li><a href="/index.html#team">Team</a></li>
-                        <li><a href="/index.html#blog">Blog</a></li>
-                        <li><a href="/index.html#signup">Sign up</a></li>
-                        <li><a href="/index.html#contact">Get in touch</a></li>
+                        <li><a data-scroll href="#about">About</a></li>
+                        <li><a data-scroll href="#team">Team</a></li>
+                        <li><a data-scroll href="#blog">Blog</a></li>
+                        <li><a data-scroll href="#signup">Sign up</a></li>
+                        <li><a data-scroll href="#contact">Get in touch</a></li>
                     </ul>
                 </section>
             </nav>
