add js for feed, URL is test right now, has to be changed for finished site

--- a/themes/trackfellas/layout/index.ejs
+++ b/themes/trackfellas/layout/index.ejs
@@ -146,37 +146,11 @@
             </div>
 
             <!-- START BLOG POSTS SECTION -->
-            <div class="row">
+            <div class="row content-div">
 
-                <div class="medium-4 columns text-center entry">
-                    <article>
-                        <a href="#">
-                        
-                        <p></p>
-                         </a>
-                    </article>
-                </div>
+                        </div>
 
-                <div class="medium-4 columns text-center entry">
-                    <article>
-                        <a href="#">
-                        
-                            <img class="blogpic" src="#">
-                        
-                        <p></p>
-                        </a>
-                    </article>
-                </div>
 
-                <div class="medium-4 columns text-center entry">
-                    <article>
-                        <a href="#">
-                        
-                        <p></p>
-                        </a>
-                    </article>
-                </div>
-            </div>
             <!-- END BLOG POSTS SECTION -->
 
 
