--- a/themes/trackfellas/layout/_partial/content.ejs
+++ b/themes/trackfellas/layout/_partial/content.ejs
@@ -1,6 +1,6 @@
         
          <img src="/img/run_small.jpg" alt="hero">
-        <a href="#signup"><div class="row show-for-large-only"><img  id="stoerer" src="/img/stoerer.png" alt="stoerer"></div></a>
+        <a data-scroll href="#signup"><div class="row show-for-large-only"><img  id="stoerer" src="/img/stoerer.png" alt="stoerer"></div></a>
 
         <section id="about">
             <div class="row"> <!-- Begin about row 1 -->
