--- a/themes/trackfellas/layout/_partial/footer.ejs
+++ b/themes/trackfellas/layout/_partial/footer.ejs
@@ -2,7 +2,7 @@
             <footer>
             <div class="row">
                 <div class="small-4 columns">
-                	<ul>
+                	<ul class="no-bullet">
                         <li><a href="index.html#about">About</a></li>
                         <li><a href="index.html#team">Team</a></li>  
                     </ul>             
