no more revolution!

--- a/themes/trackfellas/layout/content.ejs
+++ b/themes/trackfellas/layout/content.ejs
@@ -9,7 +9,7 @@
             <div class="row">
                 <div class="medium-12 large-8 large-offset-2 columns">
                     <article>
-                        <p class="text-center">Trackfellas is the revolutionary community-based platform for travelers. No more hassle gathering scattered and outdated information for your next trip. We offer everything you need in one place. That's the only all-inclusive you find here, we promise!</p>
+                        <p class="text-center">Trackfellas unites the knowledge of travelers in a community and gives them a platform to share their travel routes. No more hassle gathering scattered and outdated information for your next trip. We offer everything you need in one place. That's the only all-inclusive you find here, we promise!</p>
                     </article>
                 </div>
                 <!--titel description over -->
