update hexo, update layout and css

--- a/themes/trackfellas/layout/index.ejs
+++ b/themes/trackfellas/layout/index.ejs
@@ -7,9 +7,7 @@
             </div>
             <div class="row">
                 <div class="medium-12 large-8 large-offset-2 columns">
-                    <article>
-                        <p class="text-center">Trackfellas is the revolutionary community-based platform for travelers. No more hassle gathering scattered and outdated information for your next trip. We offer everything you need in one place. That's the only all-inclusive you find here, we promise!</p>
-                    </article>
+                        <p class="text-center">Trackfellas offers travelers a community-based platform for travel routes. No more hassle gathering scattered and outdated information for your next trip. We offer everything you need in one place. That's the only all-inclusive you find here, we promise!</p>
                 </div>
                 <!--titel description over -->
             </div>
@@ -97,9 +95,7 @@
                 </h2>
 
                 <div class="medium-12 large-8 large-offset-2 columns">
-                    <article>
                         <p class="text-center white">We are a team of passionate travelers. Trackfellas is a product of our own wanderlust and deep understanding of technology.</p>
-                    </article>
                 </div>
                 <div class="medium-4 columns small-text-center">
                     <img class="teampic" src="/img/moritz_small.jpg" alt="moritz Hubl">
@@ -139,9 +135,7 @@
                 </h2></div>
             <div class="row">
                 <div class="medium-12 large-8 large-offset-2 columns">
-                    <article>
-                        <p class="text-center">Here you find all about trackfellas, new features, the company, news, travel stories and tips and much more that makes you want to grab your backpack.</p>
-                    </article>
+                        <p class="text-center"><a href="//trackfellas.com/blog">Here</a> you find all about trackfellas, new features, the company, news, travel stories and tips and much more that makes you want to grab your backpack.</p>
                 </div>
             </div>
 
@@ -161,19 +155,16 @@
             </div>
             <div class="row">
                 <div class="medium-12 large-8 large-offset-2 columns">
-                    <article>
                         <p class="white text-center">Enter your email address below to get notified when we launch our Beta program.</p>
-                    </article>
                 </div>
             </div>
            <form id="newsletter-form" name="newsletter-form" method="post" action="http://trackfellas.us9.list-manage.com/subscribe/post?u=ba98f7b68e9f54395028fd8ac&amp;id=b99cb71b5f">
                 <div class="row collapse postfix-round">
                     <div class="small-8 medium-4 large-3 medium-offset-4 columns">
-                        <input type="email" autocapitalize="off" autocorrect="off" name="EMAIL" id="email" value="" autocomplete="off" placeholder="Email Address...">
+                        <input type="email" name="EMAIL" id="email" value="" autocomplete="off" placeholder="Email Address...">
                     </div>
                     <div class="small-4 medium-2 large-2 columns end">
-                        <button class="button round postfix" type="submit" value="Subscribe">Sign up</button>
-                       
+                        <button class="button round postfix" type="submit" value="Subscribe">Sign up</button> 
                     </div>
                 </div>
             </form>
@@ -185,11 +176,9 @@
             </div>
             <div class="row">
                 <div class="medium-12 large-8 large-offset-2 columns">
-                    <article>
                         <p class="text-center">If you want to know more, shoot us an email or get in touch on social media:
                             <a href="mailto:team@trackfellas.com">team@trackfellas.com</a>
                         </p>
-                   </article>
                 </div>
             </div>
             <div class="row">
