--- a/themes/trackfellas/layout/_partial/head.ejs
+++ b/themes/trackfellas/layout/_partial/head.ejs
@@ -14,7 +14,7 @@
   <meta property="og:title" content="Trackfellas" />
   <meta property="og:site_name" content="Trackfellas" />
   <meta property="og:url" content="http://trackfellas.com" />
-  <meta property="og:description" content="Trackfellas is the revolutionary community-based platform for your travel routes. Discover, plan, book, document, rate, share!" />
+  <meta property="og:description" content="Trackfellas unites the knowledge of travelers in a community. Discover, plan, book, document, rate, share!" />
   <meta property="og:image" content="http://trackfellas.com/img/preview_ogtwitter.jpg" />
         
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
@@ -29,7 +29,7 @@
   <link rel="icon" type="image/png" href="/favicon-160x160.png" sizes="160x160">
   <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
   <% if (theme.rss){ %>
-    <link rel="alternative" href="<%- theme.rss %>" title="<%= config.title %>" type="application/atom+xml">
+    <link rel="alternate" href="<%- theme.rss %>" title="<%= config.title %>" type="application/atom+xml">
   <% } %>
   <% if (theme.favicon){ %>
     <link rel="icon" href="<%- theme.favicon %>">
