--- a/themes/trackfellas/layout/index.ejs
+++ b/themes/trackfellas/layout/index.ejs
@@ -1,93 +1,59 @@
                 <img src="/img/run_small.jpg" alt="hero">
         <a href="#signup"><div class="row show-for-large-only"><img  id="stoerer" src="/img/stoerer.png" alt="stoerer"></div></a>
-
         <section id="about">
-            <div class="row"> <!-- Begin about row 1 -->
+            <div class="row">
                 <h2 class="text-center"><span class="line-dark">About</span></h2>
             </div>
             <div class="row">
                 <div class="medium-12 large-8 large-offset-2 columns">
-                        <p class="text-center">Trackfellas offers travelers a community-based platform for travel routes. No more hassle gathering scattered and outdated information for your next trip. We offer everything you need in one place. That's the only all-inclusive you find here, we promise!</p>
+                        <p class="text-center">Trackfellas is your community and marketplace to discover, plan, review and share travel routes.</p>
                 </div>
-                <!--titel description over -->
             </div>
-            <!-- titel row over -->
-            <div class="row"> <!-- first symbol row-->
-                <div class="medium-4 columns text-align-left"> <!-- discover begin -->
+            <ul class="small-block-grid-1 medium-block-grid-2">
+                <li>
                     <div class="row">
-                        <div class="small-5 medium-4 columns text-align-left">
+                        <div class="small-5 medium-4 columns">
                             <img src="/img/discover.svg" alt="Lupe">
                         </div>
-                        <div class="small-7 medium-8 columns text-align-left">
-                            <h3>Discover</h3>
+                        <div class="small-7 medium-8 columns">
+                            <h3>Discover Routes</h3>
 
                             <p>Get inspired by travel routes of others. Find them according to your interests.</p>
                         </div>
                     </div>
-                </div>
-                <!-- end  discover -->
-                <div class="medium-4 columns text-align-left"> <!-- row 1 plan -->
+                </li>
+                <li>
                     <div class="row">
-                        <div class="small-5 medium-4 columns text-align-left"><img src="/img/plan.svg" alt="map">
+                        <div class="small-5 medium-4 columns"><img src="/img/plan.svg" alt="map">
                         </div>
-                        <div class="small-7 medium-8 columns text-align-left">
-                            <h3>Plan</h3>
-
+                        <div class="small-7 medium-8 columns">
+                            <h3>Plan Trips</h3>
                             <p>Personalize existing routes or create your own itinerary on a map.</p>
                         </div>
                     </div>
-                </div>
-                <!-- row 1 plan -->
-                <div class="medium-4 columns text-align-left"> <!-- row 1 book -->
+                </li>
+                <li>
                     <div class="row">
-                        <div class="small-5 medium-4 columns text-align-left"><img src="/img/shop.svg" alt="Book">
+                        <div class="small-5 medium-4 columns"><img src="/img/star.svg" alt="star">
                         </div>
-                        <div class="small-7 medium-8 columns text-align-left">
-                            <h3>Book</h3>
-
-                            <p>Post your route, let tour operators make you offers and book what suits you best.</p>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-            <!-- row 1 book -->
-            <div class="row move"> <!-- row 2  -->
-                <div class="medium-4 columns text-align-left"><!-- row 2 document -->
-                    <div class="row">
-                        <div class="small-5 medium-4 columns text-align-left">
-                            <img src="/img/document.svg" alt="save">
-                        </div>
-                        <div class="small-7 medium-8 columns text-align-left">
-                            <h3>Document</h3>
-
-                            <p>Visualize your trips on a map and save them for you and your friends.</p></div>
-                    </div>
-                </div>
-                <!-- row 2 document -->
-                <div class="medium-4 columns text-align-left"> <!-- row 2 rate -->
-                    <div class="row">
-                        <div class="small-5 medium-4 columns text-align-left"><img src="/img/star.svg" alt="star">
-                        </div>
-                        <div class="small-7 medium-8 columns text-align-left">
-                            <h3>Rate</h3>
-
+                        <div class="small-7 medium-8 columns">
+                            <h3>Rate Experiences</h3>
                             <p>Recommend your best experiences and help others find their way.</p></div>
                     </div>
-                </div>
-                <div class="medium-4 columns text-align-left">
+                </li>
+                <li>
                     <div class="row">
-                        <div class="small-5 medium-4 columns text-align-left">
+                        <div class="small-5 medium-4 columns">
                             <img src="/img/share2.svg" alt="Teilen">
                         </div>
-                        <div class="small-7 medium-8 columns text-align-left">
-                            <h3>Share</h3>
+                        <div class="small-7 medium-8 columns">
+                            <h3>Share Knowledge</h3>
 
-                            <p>Get connected and share your travel routes in social media and within the community.</p>
+                            <p>Convert your travel knowledge into cash. Publish and sell your route on our marketplace.</p>
                         </div>
                     </div>
-                </div>
-            </div>
+                </li>
+            </ul>
         </section>
         <section id="team">
             <div class="row">
@@ -138,16 +104,9 @@
                         <p class="text-center"><a href="//trackfellas.com/blog">Here</a> you find all about trackfellas, new features, the company, news, travel stories and tips and much more that makes you want to grab your backpack.</p>
                 </div>
             </div>
-
-            <!-- START BLOG POSTS SECTION -->
             <div class="row content-div">
 
                         </div>
-
-
-            <!-- END BLOG POSTS SECTION -->
-
-
         </section>
         <section id="signup">
             <div class="row">
