Lots of code cleanup

--- a/themes/trackfellas/layout/index.ejs
+++ b/themes/trackfellas/layout/index.ejs
@@ -1,157 +1,163 @@
-                <img src="/img/run_small.jpg" alt="hero">
-        <a href="#signup"><div class="row show-for-large-only"><img  id="stoerer" src="/img/stoerer.png" alt="stoerer"></div></a>
-        <section id="about">
+<img src="/img/run_small.jpg" alt="hero">
+<a href="#signup">
+    <div class="row show-for-large-only"><img id="stoerer" src="/img/stoerer.png" alt="stoerer"></div>
+</a>
+<section id="about">
+    <div class="row">
+        <h2 class="text-center"><span class="line-dark">About</span></h2>
+    </div>
+    <div class="row">
+        <div class="medium-12 large-8 large-offset-2 columns">
+            <p class="text-center">Trackfellas is your community and marketplace to discover, plan, review and share travel routes.</p>
+        </div>
+    </div>
+    <ul class="small-block-grid-1 medium-block-grid-2">
+        <li>
             <div class="row">
-                <h2 class="text-center"><span class="line-dark">About</span></h2>
-            </div>
-            <div class="row">
-                <div class="medium-12 large-8 large-offset-2 columns">
-                        <p class="text-center">Trackfellas is your community and marketplace to discover, plan, review and share travel routes.</p>
+                <div class="small-5 medium-4 columns">
+                    <img src="/img/discover.svg" alt="Lupe">
                 </div>
-            </div>
-            <ul class="small-block-grid-1 medium-block-grid-2">
-                <li>
-                    <div class="row">
-                        <div class="small-5 medium-4 columns">
-                            <img src="/img/discover.svg" alt="Lupe">
-                        </div>
-                        <div class="small-7 medium-8 columns">
-                            <h3>Discover Routes</h3>
+                <div class="small-7 medium-8 columns">
+                    <h3>Discover Routes</h3>
 
-                            <p>Get inspired by travel routes of others. Find them according to your interests.</p>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="row">
-                        <div class="small-5 medium-4 columns"><img src="/img/plan.svg" alt="map">
-                        </div>
-                        <div class="small-7 medium-8 columns">
-                            <h3>Plan Trips</h3>
-                            <p>Personalize existing routes or create your own itinerary on a map.</p>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="row">
-                        <div class="small-5 medium-4 columns"><img src="/img/star.svg" alt="star">
-                        </div>
-                        <div class="small-7 medium-8 columns">
-                            <h3>Rate Experiences</h3>
-                            <p>Recommend your best experiences and help others find their way.</p></div>
-                    </div>
-                </li>
-                <li>
-                    <div class="row">
-                        <div class="small-5 medium-4 columns">
-                            <img src="/img/share2.svg" alt="Teilen">
-                        </div>
-                        <div class="small-7 medium-8 columns">
-                            <h3>Share Knowledge</h3>
-
-                            <p>Convert your travel knowledge into cash. Publish and sell your route on our marketplace.</p>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-        </section>
-        <section id="team">
-            <div class="row">
-                <h2 class="text-center"><span class="line-light">Team</span>
-                </h2>
-
-                <div class="medium-12 large-8 large-offset-2 columns">
-                        <p class="text-center white">We are a team of passionate travelers. Trackfellas is a product of our own wanderlust and deep understanding of technology.</p>
-                </div>
-                <div class="medium-4 columns small-text-center">
-                    <img class="teampic" src="/img/moritz_small.jpg" alt="moritz Hubl">
-
-                    <h3>Moritz Hubl</h3><h4>CEO</h4>
-
-                    <div class="move">
-                        <a href="mailto:moritz@trackfellas.com"><img class="social-team" src="/img/mail.svg" alt="Send eMail"></a>
-                        <a href="https://www.linkedin.com/pub/moritz-hubl/a3/90a/565" target="_blank"><img class="social-team" src="/img/linkedin.svg" alt="LinkedIn Moritz Hubl"></a>
-                    </div>
-                </div>
-                <div class="medium-4 columns small-text-center">
-                    <img class="teampic" src="/img/lucas_small.jpg" alt="Lucas Michot">
-
-                    <h3>Lucas Michot</h3><h4>CTO</h4>
-
-                    <div class="move">
-                        <a href="mailto:lucas@trackfellas.com"><img class="social-team" src="/img/mail.svg" alt="Send eMail"></a>
-                        <a href="http://fr.linkedin.com/in/lucasmichot" target="_blank"><img class="social-team" src="/img/linkedin.svg" alt="LinkedIn Lucas Michot"></a>
-                    </div>
-                </div>
-                <div class="medium-4 columns small-text-center">
-                    <img class="teampic" src="/img/niklas_small.jpg" alt="Niklas Hofmann">
-
-                    <h3>Niklas Hofmann</h3><h4>CMO/CFO</h4>
-
-                    <div class="move">
-                        <a href="mailto:niklas@trackfellas.com"><img class="social-team" src="/img/mail.svg" alt="Send eMail"></a>
-                        <a href="http://de.linkedin.com/pub/niklas-hofmann/25/7b/249/" target="_blank"><img class="social-team" src="/img/linkedin.svg" alt="LinkedIn Niklas Hofmann"></a>
-                    </div>
+                    <p>Get inspired by travel routes of others. Find them according to your interests.</p>
                 </div>
             </div>
-        </section>
-        <section id="blog">
+        </li>
+        <li>
             <div class="row">
-                <h2 class="text-center"><span class="line-dark">Blog</span>
-                </h2></div>
-            <div class="row">
-                <div class="medium-12 large-8 large-offset-2 columns">
-                        <p class="text-center"><a href="//trackfellas.com/blog">Here</a> you find all about trackfellas, new features, the company, news, travel stories and tips and much more that makes you want to grab your backpack.</p>
+                <div class="small-5 medium-4 columns"><img src="/img/plan.svg" alt="map">
                 </div>
-            </div>
-            <div class="row content-div">
+                <div class="small-7 medium-8 columns">
+                    <h3>Plan Trips</h3>
 
-                        </div>
-        </section>
-        <section id="signup">
-            <div class="row">
-                <h2 class="text-center"><span class="line-light">Sign Up</span></h2>
-            </div>
-            <div class="row">
-                <div class="medium-12 large-8 large-offset-2 columns">
-                        <p class="white text-center">Enter your email address below to get notified when we launch our Beta program.</p>
+                    <p>Personalize existing routes or create your own itinerary on a map.</p>
                 </div>
             </div>
-           <form id="newsletter-form" name="newsletter-form" method="post" action="http://trackfellas.us9.list-manage.com/subscribe/post?u=ba98f7b68e9f54395028fd8ac&amp;id=b99cb71b5f">
-                <div class="row collapse postfix-round">
-                    <div class="small-8 medium-4 large-3 medium-offset-4 columns">
-                        <input type="email" name="EMAIL" id="email" value="" autocomplete="off" placeholder="Email Address...">
-                    </div>
-                    <div class="small-4 medium-2 large-2 columns end">
-                        <button class="button round postfix" type="submit" value="Subscribe">Sign up</button> 
-                    </div>
+        </li>
+        <li>
+            <div class="row">
+                <div class="small-5 medium-4 columns"><img src="/img/star.svg" alt="star">
                 </div>
-            </form>
+                <div class="small-7 medium-8 columns">
+                    <h3>Rate Experiences</h3>
 
-        </section>
-        <section id="contact">
-            <div class="row">
-                <h2 class="text-center"><span class="line-dark">Get in touch!</span></h2>
+                    <p>Recommend your best experiences and help others find their way.</p></div>
             </div>
+        </li>
+        <li>
             <div class="row">
-                <div class="medium-12 large-8 large-offset-2 columns">
-                        <p class="text-center">If you want to know more, shoot us an email or get in touch on social media:
-                            <a href="mailto:team@trackfellas.com">team@trackfellas.com</a>
-                        </p>
+                <div class="small-5 medium-4 columns">
+                    <img src="/img/share2.svg" alt="Teilen">
                 </div>
-            </div>
-            <div class="row">
-                <div class="small-3 medium-2 columns medium-offset-2">
-                    <a href="https://www.google.com/+trackfellas" rel="publisher"><img class="sma" src="/img/googletouch.svg" alt="Google+"></a>
-                </div>
-                <div class="small-3 medium-2 columns">
-                    <a href="https://twitter.com/trackfellas"><img class="sma" src="/img/twittertouch.svg" alt="Twitter"></a>
-                </div>
-                <div class="small-3 medium-2 columns">
-                    <a href="https://www.facebook.com/trackfellas"><img class="sma" src="/img/facebooktouch.svg" alt="Facebook"></a>
-                </div>
-                <div class="small-3 medium-2 columns end">
-                    <a href="https://www.linkedin.com/company/trackfellas"><img class="sma" src="/img/linkedintouch.svg" alt="LinkedIn"></a>
+                <div class="small-7 medium-8 columns">
+                    <h3>Share Knowledge</h3>
+
+                    <p>Convert your travel knowledge into cash. Publish and sell your route on our marketplace.</p>
                 </div>
             </div>
-        </section>
+        </li>
+    </ul>
+</section>
+<section id="team">
+    <div class="row">
+        <h2 class="text-center"><span class="line-light">Team</span>
+        </h2>
+
+        <div class="medium-12 large-8 large-offset-2 columns">
+            <p class="text-center white">We are a team of passionate travelers. Trackfellas is a product of our own wanderlust and deep understanding of technology.</p>
+        </div>
+        <div class="medium-4 columns small-text-center">
+            <img class="teampic" src="/img/moritz_small.jpg" alt="moritz Hubl">
+
+            <h3>Moritz Hubl</h3><h4>CEO</h4>
+
+            <div class="move">
+                <a href="mailto:moritz@trackfellas.com"><img class="social-team" src="/img/mail.svg" alt="Send eMail"></a>
+                <a href="https://www.linkedin.com/pub/moritz-hubl/a3/90a/565" target="_blank"><img class="social-team" src="/img/linkedin.svg" alt="LinkedIn Moritz Hubl"></a>
+            </div>
+        </div>
+        <div class="medium-4 columns small-text-center">
+            <img class="teampic" src="/img/lucas_small.jpg" alt="Lucas Michot">
+
+            <h3>Lucas Michot</h3><h4>CTO</h4>
+
+            <div class="move">
+                <a href="mailto:lucas@trackfellas.com"><img class="social-team" src="/img/mail.svg" alt="Send eMail"></a>
+                <a href="http://fr.linkedin.com/in/lucasmichot" target="_blank"><img class="social-team" src="/img/linkedin.svg" alt="LinkedIn Lucas Michot"></a>
+            </div>
+        </div>
+        <div class="medium-4 columns small-text-center">
+            <img class="teampic" src="/img/niklas_small.jpg" alt="Niklas Hofmann">
+
+            <h3>Niklas Hofmann</h3><h4>CMO/CFO</h4>
+
+            <div class="move">
+                <a href="mailto:niklas@trackfellas.com"><img class="social-team" src="/img/mail.svg" alt="Send eMail"></a>
+                <a href="http://de.linkedin.com/pub/niklas-hofmann/25/7b/249/" target="_blank"><img class="social-team" src="/img/linkedin.svg" alt="LinkedIn Niklas Hofmann"></a>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="blog">
+    <div class="row">
+        <h2 class="text-center"><span class="line-dark">Blog</span>
+        </h2></div>
+    <div class="row">
+        <div class="medium-12 large-8 large-offset-2 columns">
+            <p class="text-center">
+                <a href="//trackfellas.com/blog">Here</a> you find all about trackfellas, new features, the company, news, travel stories and tips and much more that makes you want to grab your backpack.
+            </p>
+        </div>
+    </div>
+    <div class="row content-div">
+
+    </div>
+</section>
+<section id="signup">
+    <div class="row">
+        <h2 class="text-center"><span class="line-light">Sign Up</span></h2>
+    </div>
+    <div class="row">
+        <div class="medium-12 large-8 large-offset-2 columns">
+            <p class="white text-center">Enter your email address below to get notified when we launch our Beta program.</p>
+        </div>
+    </div>
+    <form id="newsletter-form" name="newsletter-form" method="post" action="http://trackfellas.us9.list-manage.com/subscribe/post?u=ba98f7b68e9f54395028fd8ac&amp;id=b99cb71b5f">
+        <div class="row collapse postfix-round">
+            <div class="small-8 medium-4 large-3 medium-offset-4 columns">
+                <input type="email" name="EMAIL" id="email" value="" autocomplete="off" placeholder="Email Address...">
+            </div>
+            <div class="small-4 medium-2 large-2 columns end">
+                <button class="button round postfix" type="submit" value="Subscribe">Sign up</button>
+            </div>
+        </div>
+    </form>
+
+</section>
+<section id="contact">
+    <div class="row">
+        <h2 class="text-center"><span class="line-dark">Get in touch!</span></h2>
+    </div>
+    <div class="row">
+        <div class="medium-12 large-8 large-offset-2 columns">
+            <p class="text-center">If you want to know more, shoot us an email or get in touch on social media:
+                <a href="mailto:team@trackfellas.com">team@trackfellas.com</a>
+            </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="small-3 medium-2 columns medium-offset-2">
+            <a href="https://www.google.com/+trackfellas" rel="publisher"><img class="sma" src="/img/googletouch.svg" alt="Google+"></a>
+        </div>
+        <div class="small-3 medium-2 columns">
+            <a href="https://twitter.com/trackfellas"><img class="sma" src="/img/twittertouch.svg" alt="Twitter"></a>
+        </div>
+        <div class="small-3 medium-2 columns">
+            <a href="https://www.facebook.com/trackfellas"><img class="sma" src="/img/facebooktouch.svg" alt="Facebook"></a>
+        </div>
+        <div class="small-3 medium-2 columns end">
+            <a href="https://www.linkedin.com/company/trackfellas"><img class="sma" src="/img/linkedintouch.svg" alt="LinkedIn"></a>
+        </div>
+    </div>
+</section>
