layout adjustments, added new hero image

--- a/themes/trackfellas/layout/_partial/after-footer.ejs
+++ b/themes/trackfellas/layout/_partial/after-footer.ejs
@@ -1,6 +1,2 @@
-<%- js('js/jquery.min') %>
-<%- js('js/foundation.min') %>
-<%- js('js/jquery.formchimp-min') %>
-<%- js('js/smooth-scroll.min.js') %>
-<%- js('js/app-min') %>
+<%- js('js/script') %>
 <%- partial('google-analytics') %>
