--- a/themes/trackfellas/layout/_partial/head.ejs
+++ b/themes/trackfellas/layout/_partial/head.ejs
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html>
-    <head>
+  <head>
         <meta charset="utf-8">
         <%
         var title = page.title;
         %>
-        <title>
-            <% if (title){ %>
-            <%= title %> |
-            <% } %>
-            <%= config.title %></title>
+        <title><% if (title){ %><%= title %> | <% } %> <%= config.title %></title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <meta name="bitly-verification" content="33323f8295d0"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -29,8 +23,6 @@
         <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
         <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
         <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
-        <link rel="icon" type="image/png" href="/favicon-196x196.png" sizes="196x196">
-        <link rel="icon" type="image/png" href="/favicon-160x160.png" sizes="160x160">
         <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
         <% if (theme.rss){ %>
         <link rel="alternate" href="<%- theme.rss %>" title="<%= config.title %>" type="application/atom+xml">
