--- a/themes/trackfellas/layout/layout.ejs
+++ b/themes/trackfellas/layout/layout.ejs
@@ -1,10 +1,10 @@
+<!DOCTYPE html>
+<html>
 <%- partial('_partial/head') %>
 <body>
     <%- partial('_partial/header', {}, {cache: true}) %>
     <%- body %>
-
     <%- partial('_partial/footer', {}, {cache: true}) %>
     <%- partial('_partial/after-footer') %>
-
 </body>
 </html>
