--- a/themes/trackfellas/layout/index.ejs
+++ b/themes/trackfellas/layout/index.ejs
@@ -15,7 +15,16 @@
         <li>
             <div class="row">
                 <div class="small-5 medium-4 columns">
-                    <img src="/img/discover.svg" alt="Lupe">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+     viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
+    <path id="Discover__x2F__map-3-icon" fill="#3D3D3F" d="M462,406.9L415.1,360c6.9-10.8,10.8-23.6,10.8-37.4
+        c0-38.6-31.4-69.9-69.9-69.9c-38.6,0-69.9,31.4-69.9,69.9s31.4,69.9,69.9,69.9c13,0,25.3-3.6,35.7-9.8l47.2,47.2L462,406.9z
+         M312.1,322.6c0-24.2,19.7-43.9,43.9-43.9c24.2,0,43.9,19.7,43.9,43.9c0,24.2-19.7,43.9-43.9,43.9
+        C331.8,366.5,312.1,346.8,312.1,322.6z M256.3,327.5l-21-13.6V123.6l72.1,36.5v75.4c4.2-2.4,8.7-4.4,13.2-6.2v-69.8l66.1-33.5
+        v101.7c9.5,3.1,18.5,7.6,26.5,13.3V82.1l-99.8,51.2l-84.5-43l-82.7,43L50,82.1v259.5l96.3,55l82.7-55l36.9,24
+        C260.3,353.9,257,341.1,256.3,327.5z M139.1,362l-62.6-35.9V126l62.6,33.5V362z M222.7,313.9l-70.4,46.7V160.1l70.4-36.5
+        L222.7,313.9L222.7,313.9z"/>
+</svg>
                 </div>
                 <div class="small-7 medium-8 columns">
                     <h3>Discover Routes</h3>
@@ -26,7 +35,22 @@
         </li>
         <li>
             <div class="row">
-                <div class="small-5 medium-4 columns"><img src="/img/plan.svg" alt="map">
+                <div class="small-5 medium-4 columns"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+     viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
+    <path id="Plan__x2F__navigation-10-icon" fill="#3D3D3F" d="M320.6,103.1l61.8-22.7l-23,62.1l-7.5-31.6L320.6,103.1z M427,107.3
+        c0,39.7-34.5,66-70.9,102.4c-36.4-36.4-70.9-62.7-70.9-102.4c0-39.1,31.7-70.9,70.9-70.9C395.3,36.5,427,68.2,427,107.3z
+         M405.6,105.2c0-27.3-22.1-49.4-49.4-49.4c-27.3,0-49.4,22.1-49.4,49.4c0,27.3,22.1,49.4,49.4,49.4
+        C383.4,154.5,405.6,132.4,405.6,105.2z M356.2,258.8c8.3,0,14.9-6.7,14.9-14.9c0-8.3-6.7-14.9-14.9-14.9s-14.9,6.7-14.9,14.9
+        S347.9,258.8,356.2,258.8z M388,209.9c-0.4,0.4-0.8,0.8-1.2,1.1v116.3L321,363.1v-79.3h-13.2v77.8l-71.9-46.5v-66.3h-12.6v66.3
+        l-70.1,46.5v-77.8h-13.2v79.3l-62.4-35.8V127.9l62.4,33.3V228h13.2v-66.2l70.1-36.4v69.4h12.6v-69.4l34.3,17
+        c-4.4-10.3-7-21.4-7.2-33.6l-33.4-16.6l-82.4,42.8l-96-51.1v258.6l96,54.8l82.4-54.8l84.2,54.8l99.5-54.8V184.6
+        C405.4,193.1,396.8,201.4,388,209.9z M333,263.2l-6-17.2c-3.2,1.1-6.6,1.7-10.1,1.7c-4.2,0-8.3-0.8-12.1-2.5l-7.2,16.7
+        c6.1,2.6,12.6,4,19.3,4C322.5,265.9,327.9,265,333,263.2z M282.3,253.5l9-15.8l-25.6-14.6l-9,15.8L282.3,253.5z M137.9,245.5
+        l-6.3,17.1c5.4,2,11.1,3,16.9,3c6.4,0,12.6-1.2,18.5-3.7l-6.9-16.8c-3.7,1.5-7.6,2.3-11.6,2.3C144.9,247.4,141.3,246.8,137.9,245.5
+        z M93.4,243.9c0,8.3,6.7,14.9,14.9,14.9c8.3,0,14.9-6.7,14.9-14.9c0-8.3-6.7-14.9-14.9-14.9C100.1,228.9,93.4,235.6,93.4,243.9z
+         M214.7,213.8l6.2,17.1c3.3-1.2,6.8-1.8,10.4-1.8c4.1,0,8,0.8,11.8,2.4l7-16.8c-6-2.5-12.3-3.8-18.8-3.8
+        C225.6,210.9,220.1,211.9,214.7,213.8z M182.7,253.2l25.3-15.1l-9.3-15.6l-25.3,15.1L182.7,253.2z"/>
+</svg>
                 </div>
                 <div class="small-7 medium-8 columns">
                     <h3>Plan Trips</h3>
@@ -37,7 +61,14 @@
         </li>
         <li>
             <div class="row">
-                <div class="small-5 medium-4 columns"><img src="/img/star.svg" alt="star">
+                <div class="small-5 medium-4 columns">
+<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+     viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
+
+    <path id="Rate__x2F__star-2-outline-icon" fill="#3D3D3F" d="M239.2,98.9l39.6,81.7l89.9,12.4l-65.4,62.9l16,89.3l-80-42.8
+        l-80,42.8l16-89.3L109.7,193l89.9-12.4L239.2,98.9z M239.2,35.6l-58,119.7L49.5,173.4l95.9,92.2L122,396.5l117.3-62.7l117.3,62.7
+        l-23.4-130.9l95.9-92.2l-131.7-18.2L239.2,35.6z"/>
+</svg>
                 </div>
                 <div class="small-7 medium-8 columns">
                     <h3>Rate Experiences</h3>
@@ -48,7 +79,19 @@
         <li>
             <div class="row">
                 <div class="small-5 medium-4 columns">
-                    <img src="/img/share2.svg" alt="Teilen">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+     viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
+<g>
+    <path id="arrow-58-icon" fill="#3D3D3F" d="M244.6,231.5L244.6,231.5L412,115.7L244.6,0v49.3c0,0-203.7,41.4-244.6,219.5
+        c87.1-93.2,244.6-86.7,244.6-86.7V231.5L244.6,231.5z"/>
+    <g enable-background="new    ">
+        <path fill="#FFFFFF" d="M252.8,86.7C253,65.5,265,60.3,281.1,60V47.1h8.7v13.3c9.4,0.8,22.6,2.5,28.6,3.1v8.7
+            c-7.5,0-36-1.3-36-1.3c-10.5-0.5-18.6,1.5-18.6,15.8v9.9c0,12,8.1,14.7,15.6,14.7h19.5c20.7,0,23.5,13.5,23.5,25.8v10.2
+            c0,20.7-16.6,25.5-32.7,24.6v12.3h-8.7v-13c-9.5-1-21-2.5-24.9-3v-8.2c6,0,21.9,0.9,35.8,0.9c6.1,0,19.3-1,19.3-13.5v-10.2
+            c0-8.6-2.7-14.7-12.5-14.7h-19.5c-22,0-26.7-13.9-26.7-25.8V86.7z"/>
+    </g>
+</g>
+</svg>
                 </div>
                 <div class="small-7 medium-8 columns">
                     <h3>Share Knowledge</h3>
