--- a/themes/trackfellas/layout/_partial/head.ejs
+++ b/themes/trackfellas/layout/_partial/head.ejs
@@ -15,15 +15,15 @@
         <meta property="og:description" content="Trackfellas unites the knowledge of travelers in a community. Discover, plan, book, document, rate, share!"/>
         <meta property="og:image" content="http://trackfellas.com/img/preview_ogtwitter.jpg"/>
 
-        <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
-        <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+        <link rel="apple-touch-icon" sizes="57x57" href="<%- url_for('apple-touch-icon-57x57.png') %>">
+        <link rel="apple-touch-icon" sizes="114x114" href="<%- url_for('apple-touch-icon-114x114.png') %>">
+        <link rel="apple-touch-icon" sizes="72x72" href="<%- url_for('apple-touch-icon-72x72.png') %>">
+        <link rel="apple-touch-icon" sizes="144x144" href="<%- url_for('apple-touch-icon-144x144.png') %>">
+        <link rel="apple-touch-icon" sizes="60x60" href="<%- url_for('apple-touch-icon-60x60.png') %>">
+        <link rel="apple-touch-icon" sizes="120x120" href="<%- url_for('apple-touch-icon-120x120.png') %>">
+        <link rel="apple-touch-icon" sizes="76x76" href="<%- url_for('apple-touch-icon-76x76.png') %>">
+        <link rel="apple-touch-icon" sizes="152x152" href="<%- url_for('apple-touch-icon-152x152.png') %>">
+        <link rel="icon" type="image/png" href="<%- url_for('favicon-32x32.png') %>" sizes="32x32">
         <% if (theme.rss){ %>
         <link rel="alternate" href="<%- theme.rss %>" title="<%= config.title %>" type="application/atom+xml">
         <% } %>
