--- a/themes/trackfellas/layout/_partial/header.ejs
+++ b/themes/trackfellas/layout/_partial/header.ejs
@@ -1,21 +1,23 @@
 <header>
-    <nav class="top-bar" data-topbar role="navigation">
+    <div class="nav-wrapper">
+    <div class="contain-to-grid"><nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
             <li class="name">
-                <div id="logo"><h1>
-                        <a href="/index.html"><img src="/img/logo.svg" alt="Trackfellas Logo"><span id="back">Trackfellas</span></a>
-                    </h1></div>
-            </li>
+                        <a href="/"><img id="logo" src="/img/logo.svg" alt="Trackfellas Logo"></a>
+                    </li>
             <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
         </ul>
         <section class="top-bar-section">
             <ul class="right">
-                <li><a data-scroll href="#about">About</a></li>
-                <li><a data-scroll href="#team">Team</a></li>
-                <li><a data-scroll href="#blog">Blog</a></li>
-                <li><a data-scroll href="#signup">Sign up</a></li>
-                <li><a data-scroll href="#contact">Get in touch</a></li>
+                <li><a data-scroll href="<%- url_for('/') %>#about">About</a></li>
+                <li><a href="<%- url_for('routes.html') %>">Routes</a></li>
+                <li><a data-scroll href="<%- url_for('/') %>#team">Team</a></li>
+                <li><a data-scroll href="<%- url_for('/') %>#blog">Blog</a></li>
+                <li><a data-scroll href="<%- url_for('/') %>#signup">Sign up</a></li>
+                <li><a data-scroll href="<%- url_for('/') %>#contact">Get in touch</a></li>
             </ul>
         </section>
     </nav>
+    </div>
+    </div>
 </header>
