--- a/themes/trackfellas/layout/impressum.ejs
+++ b/themes/trackfellas/layout/impressum.ejs
@@ -1,60 +1,37 @@
-<section id="about">
-    <div class=row">
+<section>
+    <div class="big-content impressum">
         <h1 class="text-center">Impressum</h1>
-    </div>
-    <article>
-        <div class="row">
-            <div class="small-12 medium-4 columns">
-                <h5 class="text-center">Trackfellas GbR</h5>
-
-                <p>Schönhauser Allee 109</p>
-
-                <p>10439 Berlin</p>
-            </div>
-    </article>
-    <article>
-        <div class="small-12 medium-4 columns">
-            <h5 class="text-center">Vertreten durch:</h5>
-
-            <p>Niklas Hofmann</p>
-
-            <p>Moritz Hubl</p>
-
-            <p>Lucas Michot</p>
-        </div>
-    </article>
-    <article>
-        <div class="small-12 medium-4 columns">
-            <h5 class="text-center">Kontakt:</h5>
-
-            <p>030 / 400577 95</p>
-
-            <p>E-Mail: team@trackfellas.com</p>
-            <h5 class="text-center">Inhaltlich verantwortlich:</h5>
-
-            <p>Moritz Hubl</p>
-
-            <p>Greifswalder Straße 37</p>
-
-            <p>0405 Berlin</p>
-        </div
-        </div>
-    </article>
-    <article>
-        <div class="row">
-            <h5 class="text-center">Bildnachweise:</h5>
-
-            <p><a href="http://unsplash.com">Unsplash.com</a>, <a href="http://lifeofpix.com">LifeofPix.com</a>,
-                <a href="http://isorepublic.com">IsoRepublic.com</a>,
-                <a href="http://startupstockphotos.com">StartupStockPhotos.com</a>,
-                <a href="http://stock-image-point.com">Stock-Image-Point.com</a>,
-                <a href="http://stockphotosforfree.com">StockPhotosforfree.com</a>,
-                <a href="http://skitterphoto.com">SkitterPhoto.com</a>,
-                <a href="http://goodstock.photos">GoodStock.photos</a>,
-                <a href="http://snapwiresnaps.tumblr.com">Snapwiresnaps.tumblr.com</a>,
-                <a href="http://travelcoffeebook.com">TravelCoffeeBook.com</a>,
-                <a href="http://picjumbo.com">PicJumbo.com</a>,
-                <a href="http://phoho.de">Phoho.de (Fotograf:Lukas Hofmann)</a></p>
-        </div>
-    </article>
+        <ul class="small-block-grid-2">
+            <li>
+                <h2>Trackfellas GbR</h5>
+                <p>Schönhauser Allee 109
+                <br>10439 Berlin</p>
+            </li>
+            <li>
+                <h2>Vertreten durch:</h5>
+                <p>Niklas Hofmann<br>Moritz Hubl<br>Lucas Michot</p>
+            </li>
+            <li>
+                <h2>Kontakt:</h5>
+                <p>030 / 400577 95<br>E-Mail: team@trackfellas.com</p>
+            </li>
+            <li>
+                <h2>Inhaltlich verantwortlich:</h5>
+                <p>Moritz Hubl<br>Greifswalder Straße 37<br>10405 Berlin</p>
+            </li>
+            <li>
+                <h2>Bildnachweise:</h5>
+                <p><a href="http://unsplash.com">Unsplash.com</a>, <a href="http://lifeofpix.com">LifeofPix.com</a>,
+                    <a href="http://isorepublic.com">IsoRepublic.com</a>,
+                    <a href="http://startupstockphotos.com">StartupStockPhotos.com</a>,
+                    <a href="http://stock-image-point.com">Stock-Image-Point.com</a>,
+                    <a href="http://stockphotosforfree.com">StockPhotosforfree.com</a>,
+                    <a href="http://skitterphoto.com">SkitterPhoto.com</a>,
+                    <a href="http://goodstock.photos">GoodStock.photos</a>,
+                    <a href="http://snapwiresnaps.tumblr.com">Snapwiresnaps.tumblr.com</a>,
+                    <a href="http://travelcoffeebook.com">TravelCoffeeBook.com</a>,
+                    <a href="http://picjumbo.com">PicJumbo.com</a>,
+                    <a href="http://phoho.de">Phoho.de (Fotograf:Lukas Hofmann)</a></p>
+            </li>
+        </ul>
 </section>
