--- a/themes/trackfellas/scss/app.scss
+++ b/themes/trackfellas/scss/app.scss
@@ -2,7 +2,7 @@
 // @import "foundation";
 // Or selectively include components
 @import
-//   "../bower_components/foundation/scss/foundation/components/accordion",
+"../bower_components/foundation/scss/foundation/components/accordion",
 //  "../bower_components/foundation/scss/foundation/components/alert-boxes",
 "../bower_components/foundation/scss/foundation/components/block-grid",
 //   "../bower_components/foundation/scss/foundation/components/breadcrumbs",
@@ -37,4 +37,6 @@
 "../bower_components/foundation/scss/foundation/components/type";
 //   "../bower_components/foundation/scss/foundation/components/offcanvas",
 //   "../bower_components/foundation/scss/foundation/components/visibility";
+@import "../bower_components/fontawesome/scss/font-awesome.scss";
 @import "trackfellas";
+@import "../bower_components/featherlight/src/featherlight";
