remove caching to have correct header and footer, add menu to template

--- a/themes/trackfellas/layout/layout.ejs
+++ b/themes/trackfellas/layout/layout.ejs
@@ -2,9 +2,9 @@
 <html>
 <%- partial('_partial/head') %>
 <body>
-    <%- partial('_partial/header', {}, {cache: true}) %>
+    <%- partial('_partial/header') %>
     <%- body %>
-    <%- partial('_partial/footer', {}, {cache: true}) %>
+    <%- partial('_partial/footer') %>
     <%- partial('_partial/after-footer') %>
 </body>
 </html>
