--- a/themes/trackfellas/layout/_partial/footer.ejs
+++ b/themes/trackfellas/layout/_partial/footer.ejs
@@ -1,12 +1,9 @@
 <footer>
         <ul class="small-block-grid-2 medium-block-grid-4 text-center">
-                <li><a data-scroll href="<%- url_for('/') %>#about">About</a></li>
-                <li><a href="<%- url_for('routes.html') %>">Routes</a></li>
-                <li><a data-scroll href="<%- url_for('/') %>#team">Team</a></li>
-                <li><a data-scroll href="<%- url_for('/') %>#blog">Blog</a></li>
-                <li><a data-scroll href="<%- url_for('/') %>#signup">Sign up</a></li>
-                <li><a data-scroll href="<%- url_for('/') %>#contact">Contact</a></li>
-                <li><a href="<%- url_for('privacy.html') %>">Privacy</li>
+            <% for (var i in theme.menu){ %>
+          <li><a href="<%- url_for(theme.menu[i]) %>"><%= i %></a></li>
+        <% } %>
+                <li><a href="<%- url_for('privacy.html') %>">Privacy</a></li>
                 <li><a href="<%- url_for('impressum.html') %>">Impressum</a></li>
         </ul>
         <p class="text-center">
