--- a/themes/trackfellas/layout/_partial/header.ejs
+++ b/themes/trackfellas/layout/_partial/header.ejs
@@ -9,13 +9,10 @@
         </ul>
         <section class="top-bar-section">
             <ul class="right">
-                <li><a data-scroll href="<%- url_for('/') %>#about">About</a></li>
-                <li><a href="<%- url_for('routes.html') %>">Routes</a></li>
-                <li><a data-scroll href="<%- url_for('/') %>#team">Team</a></li>
-                <li><a data-scroll href="<%- url_for('/') %>#blog">Blog</a></li>
-                <li><a data-scroll href="<%- url_for('/') %>#signup">Sign up</a></li>
-                <li><a data-scroll href="<%- url_for('/') %>#contact">Get in touch</a></li>
-            </ul>
+            <% for (var i in theme.menu){ %>
+          <li><a href="<%- url_for(theme.menu[i]) %>"><%= i %></a></li>
+        <% } %>
+        </ul>
         </section>
     </nav>
     </div>
